# MiniKanrenT

./: .gitignore  LICENSE.txt  MiniKanren.cabal  MiniKanrenT.cabal  README.md  Relational.cabal  example.hs
src/: examples.hs
src/Control/Monad/: LogicVarT.hs  MiniKanren.hs  MiniKanrenT.hs  PureRefT.hs  Relational.hs
src/Control/Monad/MiniKanren/: Core.hs  List.hs  Symbol.hs  Term.hs  Tuple.hs
src/Control/Monad/MiniKanrenT/: Term.hs
src/Data/: LMap.hs
