Name: MiniKanren
Synopsis: miniKanren in Haskell
Description: An implementation of miniKanren (a logic programming language embedded in Scheme) in Haskell 
Version: 0.0.1
License: MIT
License-File: LICENSE.txt
Author: Job Vranish <job.vranish@gmail.com>
Maintainer: Job Vranish
Stability: experimental
Category: Logic
Cabal-Version: >= 1.10.1.0
Build-Type: Simple

source-repository head
  type: git
  location: git@github.com:jvranish/MiniKanren.git

Library
    Default-Language: Haskell2010
    Build-Depends: base >= 4 && < 5,
                   containers -any,
                   transformers  >= 0.2.2.0,
                   syb >= 0.3,
                   logict -any

    Exposed-Modules:
        Control.Monad.MiniKanren
        Control.Monad.MiniKanren.Core
        Control.Monad.MiniKanren.Term
        Control.Monad.LogicVarT

    ghc-options:        -Wall
    hs-source-dirs:     src